--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+lambda.zip
+outfile.txt
 *.gem
 *.rbc
 /.config
@@ -12,14 +14,6 @@
 
 # Used by dotenv library to load environment variables.
 # .env
-
-## Specific to RubyMotion:
-.dat*
-.repl_history
-build/
-*.bridgesupport
-build-iPhoneOS/
-build-iPhoneSimulator/
 
 ## Specific to RubyMotion (use of CocoaPods):
 #
@@ -48,3 +42,11 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+.DS_Store
+
+.terraform
+terraform.tfstate
+*.tfstate*
+terraform.tfvars
+.vagrant
